fix title and description alignment with the thumbnail in blog page

--- a/themes/ESGI-theme/src/css/components/_blog-page.scss
+++ b/themes/ESGI-theme/src/css/components/_blog-page.scss
@@ -74,7 +74,7 @@
                 }
 
                 .post-content {
-                    padding: 25px 20px;
+                    padding: 25px 20px 25px 0;
 
                     h2 {
                         margin: 0 0 15px 0;
@@ -212,7 +212,7 @@
                     }
 
                     .post-content {
-                        padding: 20px 15px;
+                        padding: 20px 15px 20px 0;
 
                         h2 {
                             font-size: 1.2rem;
@@ -268,7 +268,7 @@
                     }
 
                     .post-content {
-                        padding: 15px 12px;
+                        padding: 15px 12px 15px 0;
 
                         h2 {
                             font-size: 1.1rem;
